"""Notification Service gRPC Servicer"""

import logging

logger = logging.getLogger(__name__)


class NotificationServiceServicer:
    """gRPC servicer for Notification Service"""
    
    def __init__(self, business_service):
        self.business_service = business_service
        logger.info("NotificationServiceServicer initialized")
    
    async def SendNotification(self, request, context):
        """Send a single notification"""
        # TODO: Implement SendNotification
        pass
    
    async def SendBulkNotifications(self, request, context):
        """Send bulk notifications"""
        # TODO: Implement SendBulkNotifications
        pass
    
    async def GetNotificationStatus(self, request, context):
        """Get notification delivery status"""
        # TODO: Implement GetNotificationStatus
        pass
    
    async def GetNotificationHistory(self, request, context):
        """Get notification history for a user"""
        # TODO: Implement GetNotificationHistory
        pass


# TODO: Implement error handling
# TODO: Add authentication check

